修改整体聊天列表逻辑，分为四项模型User,Friend,Group,Message 部份逻辑待优化

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -94,7 +94,7 @@
             android:orientation="horizontal"/>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/friend_list"
+            android:id="@+id/message_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginBottom="60dp"
