添加聊天详情返回聊天列表更新最新信息

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -43,7 +43,7 @@
         >
     <!--header-->
     <TextView
-        android:id="@+id/chat_name"
+        android:id="@+id/chat_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
