--- a/app/src/main/res/layout/message_list_layout.xml
+++ b/app/src/main/res/layout/message_list_layout.xml
@@ -38,6 +38,15 @@
             android:textSize="13sp"
             android:textColor="#a6a6a6"
             android:layout_marginTop="2dp"/>
+
+        <TextView
+            android:id="@+id/item_time"
+            android:layout_width="80dp"
+            android:layout_height="45dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="10dp"
+            android:gravity="center_vertical|end"
+            android:textSize="13sp" />
     </RelativeLayout>
     <View
         android:layout_below="@id/card"
