--- a/app/src/main/res/layout/item_message_left.xml
+++ b/app/src/main/res/layout/item_message_left.xml
@@ -8,7 +8,9 @@
         android:id="@+id/message_left_avatar"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_margin="10dp" />
+        android:layout_margin="10dp"
+        android:src="@mipmap/default_user_avatar"
+        />
     <!--        android:src="@drawable/avatar_right"-->
     <LinearLayout
         android:layout_width="wrap_content"
