新增添加好友功能，修改数据库初始化的时间数据

--- a/app/src/main/res/layout/item_contacts_header.xml
+++ b/app/src/main/res/layout/item_contacts_header.xml
@@ -6,47 +6,47 @@
     android:background="#ffffff"
     android:orientation="vertical">
 
-    <RelativeLayout
-        android:id="@+id/rl_new_friends"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/contacts_layout_height"
-        android:background="@drawable/bg_list_item_click"
-        android:clickable="true">
+<!--    <RelativeLayout-->
+<!--        android:id="@+id/rl_new_friends"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="@dimen/contacts_layout_height"-->
+<!--        android:background="@drawable/bg_list_item_click"-->
+<!--        android:clickable="true">-->
 
-        <ImageView
-            android:id="@+id/sdv_new_friends"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="12dp"
-            android:src="@mipmap/icon_contacts_new_friends"/>
+<!--        <ImageView-->
+<!--            android:id="@+id/sdv_new_friends"-->
+<!--            android:layout_width="36dp"-->
+<!--            android:layout_height="36dp"-->
+<!--            android:layout_alignParentLeft="true"-->
+<!--            android:layout_centerVertical="true"-->
+<!--            android:layout_marginLeft="12dp"-->
+<!--            android:src="@mipmap/icon_contacts_new_friends"/>-->
 
-        <TextView
-            android:id="@+id/tv_new_friends"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="12dp"
-            android:layout_toRightOf="@id/sdv_new_friends"
-            android:text="@string/new_friends"
-            android:textColor="#353535"
-            android:textSize="@dimen/contacts_text_size" />
+<!--        <TextView-->
+<!--            android:id="@+id/tv_new_friends"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_centerVertical="true"-->
+<!--            android:layout_marginLeft="12dp"-->
+<!--            android:layout_toRightOf="@id/sdv_new_friends"-->
+<!--            android:text="@string/new_friends"-->
+<!--            android:textColor="#353535"-->
+<!--            android:textSize="@dimen/contacts_text_size" />-->
 
-        <TextView
-            android:id="@+id/tv_new_friends_unread"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="30dp"
-            android:background="@mipmap/bg_unread_count"
-            android:gravity="center"
-            android:text="1"
-            android:textColor="#ffffff"
-            android:textSize="12sp"
-            android:visibility="gone" />
-    </RelativeLayout>
+<!--        <TextView-->
+<!--            android:id="@+id/tv_new_friends_unread"-->
+<!--            android:layout_width="20dp"-->
+<!--            android:layout_height="20dp"-->
+<!--            android:layout_alignParentRight="true"-->
+<!--            android:layout_centerVertical="true"-->
+<!--            android:layout_marginRight="30dp"-->
+<!--            android:background="@mipmap/bg_unread_count"-->
+<!--            android:gravity="center"-->
+<!--            android:text="1"-->
+<!--            android:textColor="#ffffff"-->
+<!--            android:textSize="12sp"-->
+<!--            android:visibility="gone" />-->
+<!--    </RelativeLayout>-->
 
 <!--    <View-->
 <!--        android:layout_width="match_parent"-->
