--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -37,6 +37,7 @@
     <color name="divider_list">#cccccc</color>
     <color name="color_light_grey">#f0f0f0</color>
     <color name="error_item_color">#F6EBE6</color>
+    <color name="setting_content">#80000000</color>
 </resources>
 
 
