--- a/app/src/main/res/layout/item_message_right.xml
+++ b/app/src/main/res/layout/item_message_right.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:paddingBottom="8dp"
+    >
 
     <View
         android:layout_width="0dp"
@@ -27,6 +29,7 @@
                 android:id="@+id/message_right_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 android:layout_marginEnd="8dp"
                 android:text="右边用户" />
 <!--            <View-->
@@ -47,8 +50,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxWidth="200dp"
-            android:text="00asdasd"
-            android:textColor="#000000" /> <!-- 把内容放在下面 -->
+            android:textColor="@color/black"
+            android:text="00asdasd"/> <!-- 把内容放在下面 -->
 
     </LinearLayout>
 
