--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,6 +9,7 @@
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
+        <item name="android:windowLightStatusBar">true</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" >@color/app_common_bg</item>
         <item name="android:navigationBarColor">@color/main_tab_bg</item>
